--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 
 <div class="container">
     <div class="column1">
-        <img src="anasutil-website-images/MVI_4799%20-%20frame%20at%201m20s.jpg" alt="">
+        <img src="MVI_4799%20-%20frame%20at%201m20s.jpg" alt="">
         
     </div>
     <div class="column1">
